# object-detection-camera

./: .gitignore  CMakeLists.txt  README.md  app.py  basic.sh  build.sh  detect-send.py  detect-send.sh  detect_and_send.sh  detector.py  gpio-emulator.py  http.cpp  http.hpp  init.sh  install-opencv.sh  main.cpp  main.py  test.cpp  vision.hpp
Workspace/: BG96.cpp  device.cpp  device.hpp  gpio.hpp  main.cpp
ai-cam/: main.cpp  yolo_cpu.cpp  yolo_cpu.hpp
config/: config.json
docs/: Doxyfile  README.md  Untitled Diagram-10.drawio  Untitled Diagram-7.drawio  flowchart.drawio  uml.drawio
include/: BG96.hpp  Common.hpp  Config.hpp  GPIO.hpp  Handler.hpp  HttpPostFormData.hpp  NRF.hpp  Serial.hpp  YoloObjectDetector.hpp  config.hpp  date.hpp  gpio.hpp  http.hpp  serials.hpp  vision.hpp
main/: main.cpp  test.cpp
model/: classes.names
server/: binding.gyp  package-lock.json
server/src/native/: camera.cpp
src/: BG96.cpp  Common.cpp  Config.cpp  GPIO.cpp  Handler.cpp  HttpPostFormData.cpp  NRF.cpp  Serial.cpp  YoloObjectDetector.cpp  config.cpp  date.cpp  gpio.cpp  http.cpp  main.cpp  serials.cpp  vision.cpp  yolo_cpu.cpp  yolo_cpu.hpp
test/: attachNetwork.py  cam-yolo.py  catm1.py  catm1Infos.py  catm1PostReq.py  catm1PwrOff.py  catm1PwrOn.py  gpio-emulator.py  piPostReq.py  pwrOn.py  socketTest.py  test.cpp
webapp/: webapp.py
webapp/static/css/: bootstrap.min.css.map
webapp/templates/: base.html  index.html
